# semantic-frame

./: .gitignore  Battle_Plan.md  CHANGELOG.md  CLAUDE.md  Idea.md  README.md  cortex.md  mkdocs.yml  pyproject.toml
benchmarks/: README.md  TODO.md  __init__.py  claude_client.py  config.py  datasets.py  external_datasets.py  metrics.py  reporter.py  run_benchmark.py  runner.py  statistics.py  visualizations.py
benchmarks/results/: benchmark_report.md  benchmark_results.csv  benchmark_results.json
benchmarks/tasks/: base.py  comparative.py  multi_step.py  scaling.py  trend.py
docs/: benchmark_overview.md  claude_code_cli_research.md  integrations.md  universal-dictionary.md
scripts/: validate_compression.py
semantic_frame/: __init__.py  main.py
semantic_frame/core/: __init__.py  analyzers.py  enums.py  translator.py
semantic_frame/integrations/: __init__.py  anthropic.py  crewai.py  mcp.py
semantic_frame/interfaces/: __init__.py  json_schema.py  llm_templates.py
semantic_frame/narrators/: __init__.py  distribution.py  time_series.py
semantic_frame/trading/: __init__.py  allocation.py  anomalies.py  drawdown.py  metrics.py  rankings.py  regime.py  schemas.py  windows.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/getting-started/: index.html
site/integrations/: index.html
site/search/: search_index.json
site/universal-dictionary/: index.html
tests/: test_analyzers.py  test_anthropic_integration.py  test_benchmark_claude_client.py  test_benchmark_config.py  test_benchmark_datasets.py  test_benchmark_external_datasets.py  test_benchmark_metrics.py  test_benchmark_reporter.py  test_crewai_integration.py  test_enums.py  test_integration.py  test_langchain_integration.py  test_mcp_integration.py  test_narrators.py  test_trading_allocation.py  test_trading_anomalies.py  test_trading_drawdown.py  test_trading_regime.py  test_translator.py
