[project]
name = "semantic-frame"
version = "0.1.0"
description = "Semantic compression layer for numerical data - token-efficient LLM context"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["semantic", "llm", "data", "compression", "pandas", "polars", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "polars>=0.20",
    "scipy>=1.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
anthropic = [
    "anthropic>=0.20",
]
langchain = [
    "langchain>=0.1",
]
crewai = [
    "crewai>=0.1",
]
mcp = [
    "mcp[cli]>=1.0.0",
]
all = [
    "anthropic>=0.20",
    "langchain>=0.1",
    "crewai>=0.1",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/semantic-frame"
Repository = "https://github.com/yourusername/semantic-frame"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_frame"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = false
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "crewai.*",
    "mcp.*",
    "langchain.*",
    "polars.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=semantic_frame --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.0",
]

docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
